herokuでdeployできるように変更

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,7 +2,7 @@
   <body>
     <div id="progress"></div>
     <div id="word" style="font-size: 100px;">Start!!!</div>
-    <div id="answer-check">Answer Check</div>
+    <div id="answer-check">Answer Check (Press q)</div>
     <script src="main.js"></script>
   </body>
 </html>
