--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <div id="progress"></div>
+    <div id="time-progress"></div>
     Add results to log => <a href="https://github.com/syou6162/etymology-english/tree/master/logs">github</a>
     <div id="word" style="font-size: 100px;">Start!!!</div>
     <div id="answer-check">Answer Check (Press q)</div>
