語幹毎の単語リストを追加

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,6 +4,9 @@
     <div id="time-progress"></div>
     Add results to log => <a href="https://github.com/syou6162/etymology-english/tree/master/logs">github</a>
     <div id="word" style="font-size: 100px;">Start!!!</div>
+    <div>
+      View all words by their roots => <a href="./list-by-root">words</a>
+    </div>
     <div id="answer-check">Answer Check (Press q)</div>
     <script src="main.js"></script>
   </body>
