学習経過をグラフ表示するように変更

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,6 +7,9 @@
     <div>
       View all words by their roots => <a href="./list-by-root">words</a>
     </div>
+    <div>
+      View learning curve => <a href="./learning_curve.html">chart</a>
+    </div>
     <div id="answer-check">Answer Check (Press q)</div>
     <script src="main.js"></script>
   </body>
