--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,9 +1,16 @@
 <html>
+  <head>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="./learning_curve.js"></script>
+  </head>
   <body>
     <div id="progress"></div>
     <div id="time-progress"></div>
     Add results to log => <a href="https://github.com/syou6162/etymology-english/tree/master/logs">github</a>
-    <div id="word" style="font-size: 100px;">Start!!!</div>
+    <div id="word" style="font-size: 100px;">
+      <div id="chart" style="width: 900px; height: 500px;"></div>
+    </div>
     <div>
       View all words by their roots => <a href="./list-by-root">words</a>
     </div>
